docs/user-guide/ingress/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eda-ui
  namespace: default
spec:
  parentRefs:
    - name: eda-gw
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: eda-api
          port: 9200
