docs/user-guide/ingress/tlsroute.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: eda-ui
  namespace: default
spec:
  parentRefs:
    - name: eda-gw-https
      namespace: default
  rules:
    - backendRefs:
        - kind: Service
          name: eda-api
          port: 443
