docs/user-guide/ingress/traefik-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: eda-ui
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: eda-api
          kind: Service
          namespace: default
          port: 9200
